Fix T52315: Crash on duplicating Scene without world.

Regression from rBa7b3047cefcbf, to be backported to 2.79.

Like... seriously... :|